--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -1,30 +1,111 @@
-<script src="//cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
 <script src="/js/search.min.js"></script>
 <script type="text/javascript">
 
-// disqus scripts
-<% if (config.disqus_shortname){ %>
-var disqus_shortname = '<%= config.disqus_shortname %>';
-(function(){
-  var dsq = document.createElement('script');
-  dsq.type = 'text/javascript';
-  dsq.async = true;
-  dsq.src = '//' + disqus_shortname + '.disqus.com/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
-  (document.getElementsByTagName('body')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-}());
-<% } %>
+  // disqus scripts
+  <% if (config.disqus_shortname) { %>
+  var disqus_shortname = '<%= config.disqus_shortname %>';
+      (function () {
+        var dsq = document.createElement('script');
+        dsq.type = 'text/javascript';
+        dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
+        (document.getElementsByTagName('body')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      }());
+  <% } %>
 
-// dropdown scripts
-$(".dropdown").click(function(event) {
-  var current = $(this);
-  event.stopPropagation();
-  $(current).children(".dropdown-content")[($(current).children(".dropdown-content").hasClass("open"))?'removeClass':'addClass']("open")
-});
-$(document).click(function(){
-    $(".dropdown-content").removeClass("open");
-})
+      // dropdown scripts
+      $(".dropdown").click(function (event) {
+        var current = $(this);
+        event.stopPropagation();
+        $(current).children(".dropdown-content")[($(current).children(".dropdown-content").hasClass("open")) ? 'removeClass' : 'addClass']("open")
+      });
+    $(document).click(function () {
+      $(".dropdown-content").removeClass("open");
+    })
 
-var path = "/search.xml";
-searchFunc(path, 'local-search-input', 'local-search-result');
-
+    var path = "/search.xml";
+    searchFunc(path, 'local-search-input', 'local-search-result');
 </script>
+
+<div id="updown">
+  <div class="sidebar_wo" id="leimu">
+    <img
+      src="/img/leimu.png"
+      alt="雷姆"
+      onmouseover="this.src='/img/leimu.png'"
+      onmouseout="this.src='/img/leimu.png'"
+      id="audioBtn"
+    />
+  </div>
+  <div class="sidebar_wo" id="lamu">
+    <img
+      src="/img/lamu_2.png"
+      alt="拉姆"
+      onmouseover="this.src='/img/lamu_1.png'"
+      onmouseout="this.src='/img/lamu_2.png'"
+      id="audioBtn"
+    />
+  </div>
+</div>
+
+<style>
+  .sidebar_wo {
+    position: fixed;
+    line-height: 0;
+    bottom: 0;
+    z-index: 1000;
+  }
+
+  #leimu {
+    left: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    -webkit-transform: translate(-7px, 7px);
+    -ms-transform: translate(-7px, 7px);
+    transform: translate(-7px, 7px);
+  }
+
+  #lamu {
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    -webkit-transform: translate(7px, 7px);
+    -ms-transform: translate(7px, 7px);
+    transform: translate(7px, 7px);
+    right: 0;
+  }
+
+  #leimu:hover {
+    -webkit-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+
+  #lamu:hover {
+    -webkit-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+</style>
+
+<script src="/js/click.js"></script>
+<style>
+  .cc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem;
+  }
+</style>
+<div class="cc">
+  <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+    ><img
+      alt="知识共享许可协议"
+      style="border-width:0"
+      src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"/></a
+  ><br />本作品采用<a
+    rel="license"
+    href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+    >知识共享署名-非商业性使用-相同方式共享 4.0 国际许可协议</a
+  >进行许可
+</div>
