--- a/source/css/footer.scss
+++ b/source/css/footer.scss
@@ -1,4 +1,6 @@
 @mixin tran($dg: 270deg) {
+
+
     transform: rotate($dg);
     -webkit-transform: rotate($dg);
     -moz-transform: rotate($dg);
@@ -6,7 +8,7 @@
 }
 
 .right-foot {
-    font-family: 'Pacifico', Arial, sans-serif;
+    font-family: 'Pacifico', Helvetica Neue, Helvetica, PingFang SC, Lantinghei SC, Hiragino Sans GB, Microsoft YaHei, \\5FAE\8F6F\96C5\9ED1, STHeitiSC-Light, simsun, WenQuanYi Zen Hei, WenQuanYi Micro Hei, Arial, sans-serif;
     position: fixed;
     z-index: 0;
     transform-origin: top right;
