--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -6,13 +6,10 @@
 @import "code";
 @import "animation";
 @import "toc";
-$background: #fdfefe;
+$background: #fdfdfc;
 $theme: #2570a1;
-$para: #444;
+$para: #555;
 $lighter: #9c9c9c;
-$big: 32px;
-$mid: 26px;
-$small: 18px;
 ::selection {
     background: lighten($theme, 40%);
 }
@@ -33,21 +30,18 @@ h5,
 h6 {
     font-weight: bold;
     margin: 2.36em 0 1em;
-    font-size: $mid;
+    font-size: 1.79em;
     color: #1a1a1a;
 }
 
 h1 {
-    font-size: $big;
+    font-size: 2.36em;
 }
-
-@import url(https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700|Pacifico);
 
 .index-title,
 .navbar-brand,
 .section-year,
 .archive-title,
-.dropdown-content,
 .pager,
 .page-title,
 h1,
@@ -56,15 +50,13 @@ h3,
 h4,
 h5,
 h6,
-.toc,
-.busuanzi {
-    font-family: 'Open Sans Condensed', Futura, AvenirNext, Avenir, sans-serif;
+.toc {
+    font-family: 'Open Sans Condensed', Helvetica Neue, Helvetica, PingFang SC, Lantinghei SC, Hiragino Sans GB, Microsoft YaHei, \\5FAE\8F6F\96C5\9ED1, STHeitiSC-Light, simsun, WenQuanYi Zen Hei, WenQuanYi Micro Hei, Arial, sans-serif;
 }
 
 body {
-    overflow-x: hidden;
-    font-size: $small;
-    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, "PingFang SC",STHeiti,"Helvetica Neue","Microsoft Yahei",Tahoma,Simsun,sans-serif;
+    font-size: 14px;
+    font-family: PingFang HK, -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
     background-color: $background;
     margin: 0;
     padding: 0;
@@ -73,7 +65,7 @@ body {
     -webkit-font-smoothing: antialiased;
     text-size-adjust: 100%;
     -moz-osx-font-smoothing: grayscale;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     word-wrap: break-word;
 }
 
@@ -100,7 +92,7 @@ p,
 .navbar-brand,
 .right-foot,
 .pager {
-    font-size: $small;
+    font-size: 1.5em;
 }
 
 .busuanzi,
@@ -118,36 +110,38 @@ a:focus {
 
 p {
     margin: .7em 0;
+    letter-spacing: .6px;
     color: $para;
     padding: 0;
     border: 0;
     outline: 0;
+    vertical-align: baseline;
     background: transparent;
     text-justify: auto;
 }
 
-.post ul li {
+.post li {
     line-height: 2em;
     color: lighten($para, 10%);
 }
 
-.post ul li:before {
+.post li:before {
     content: '·';
     margin-right: .4em;
 }
 
-ul li,
-.toc li {
+li {
     list-style-type: none;
     list-style: none;
 }
 
+ol,
 ul {
     padding-left: 1em;
 }
 
 .behind {
-    font-size: $mid;
+    font-size: 22px;
     padding: 28px 0 0;
     word-spacing: 2px;
     color: $lighter;
@@ -171,7 +165,7 @@ ul {
 }
 
 .meta {
-    font-size: $small;
+    font-size: 15px;
     color: $lighter;
     padding-top: 13px;
     a {
@@ -200,7 +194,7 @@ ul {
 }
 
 .archive-time {
-    font-size: $small;
+    font-size: 20px;
     width: 40%;
     margin-right: 20px;
     text-align: right;
@@ -208,7 +202,7 @@ ul {
 }
 
 .archive-detail {
-    font-size: $small;
+    font-size: 17px;
     width: 90%;
     padding: 0 20px;
     word-wrap: break-word;
@@ -229,11 +223,9 @@ blockquote {
         color: #1a1a1a;
         text-indent: 0;
         line-height: 1.6;
-        font-size: $mid;
+        font-size: 1.2em;
     }
 }
-
-
 
 table {
     width: 100%;
@@ -246,9 +238,6 @@ video {
 }
 
 iframe {
-    display: inline-block;
-    box-sizing: border-box;
-    height: auto;
     max-width: 100%;
 }
 
@@ -263,14 +252,14 @@ img {
 }
 
 .busuanzi {
-    font-size: $small;
-    line-height: $small;
+    font-size: 14px;
+    line-height: 14px;
     margin: 30px 0;
     color: #CDD2D4;
 }
 
-.index-meta {
-    vertical-align: middle;
+.index-meta * {
+    vertical-align: top;
     line-height: 1;
 }
 
@@ -289,10 +278,9 @@ img {
 
 p,
 .post li {
-    font-size: $small;
+    font-size: 16.6px;
     line-height: 1.9em;
 }
-
 
 @media screen and (max-width:782px) {
     .main-ctnr {
@@ -308,7 +296,7 @@ p,
         opacity: 0;
     }
     .archive-title {
-        font-size: $big;
+        font-size: 2.2em;
     }
     .post ul {
         margin-left: -10px;
