--- a/source/css/toc.scss
+++ b/source/css/toc.scss
@@ -1,18 +1,20 @@
 .toc {
   position: fixed;
   top: 50%;
-  left: calc(50% - 391px);
+  left: 0;
   text-align: right;
-  transform: translate(-100%, -50%);
+  transform: translateY(-50%);
   padding: 4em 0;
   padding-right: 2em;
   overflow: auto;
   max-height: 100%;
+  width: calc(50% - 391px);
 }
 
 .toc-text {
-  color: #ACACAB;
-  transition: color .3s;
+  filter: grayscale(1);
+  opacity: .5;
+  transition: filter .3s, opacity .3s;
 }
 
 .toc-level-1 .toc-text,
@@ -28,7 +30,9 @@
 }
 
 .toc:hover .toc-text {
+  opacity: 1;
   color: #2570a1;
+  filter: grayscale(0)
 }
 
 .toc ol, ul {
@@ -42,6 +46,17 @@
 // 小屏幕
 @media screen and (max-width:1200px) {
   .toc {
-    display: none;
+    position: relative;
+    width: 100%;
+    transform: none;
+    text-align: left;
   }
+
 }
+
+// @media (min-width: 768px) {
+//   .toc {
+//     width: calc(50% - 750px / 2);
+//     background: yellow;
+//   }
+// }
