--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -33,5 +33,6 @@
   <link rel="alternate" href="<% if (theme.rss){ %><%- theme.rss %><% } else { %><%- config.root %>atom.xml<% } %>" title="<%= config.title %>" type="application/atom+xml">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/m.min.css">
+  <link rel="stylesheet" href="/css/notosans.css">
   <link rel="icon" type="image/x-icon" href="<%- config.root %>favicon.ico">
 </head>
