--- a/layout/_partial/archive.ejs
+++ b/layout/_partial/archive.ejs
@@ -46,7 +46,7 @@ if (page.archive){
                       <%= date(post.date, 'MM-DD') %>
                     </div>
                     <div class="archive-detail">
-                      <a href="<%- url_for(post.path) %>" class="archive-link">
+                      <a href="./<%- url_for(post.path) %>" class="archive-link">
                         <%= post.title %>
                       </a>
                     </div>
@@ -58,7 +58,7 @@ if (page.archive){
                       <%= date(post.date, 'MM-DD') %>
                     </div>
                     <div class="archive-detail">
-                      <a href="<%- url_for(post.path) %>" class="archive-link">
+                      <a href="./<%- url_for(post.path) %>" class="archive-link">
                         <%= post.title %>
                       </a>
                     </div>
