--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -8,7 +8,7 @@
   <% } else { %>
     <%- strip_html(item.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, theme.excerpt_num) %>
   <% } %>
-  <a href="<%- config.root %><%- item.path %>">
+  <a href="./<%- config.root %><%- item.path %>">
     <%= __("read_more") %>
   </a>
   </div>
