--- a/layout/_partial/post/meta.ejs
+++ b/layout/_partial/post/meta.ejs
@@ -19,7 +19,7 @@
 <% if (item.categories && item.categories.length){ %>
     <% var cats = [];
         item.categories.forEach(function(cat){
-        cats.push('<a href="' + config.root + cat.path + '">' + cat.name + '</a>');
+        cats.push('<a href="./' + config.root + cat.path + '">' + cat.name + '</a>');
     });%>
     &nbsp;
     <svg class="i-tag" viewBox="0 0 32 32" width="14" height="14" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
@@ -34,7 +34,7 @@
 <% if (item.tags && item.tags.length){ %>
     <% var tags = [];
         item.tags.forEach(function(tag){
-        tags.push('<a href="' + config.root + tag.path + '">' + tag.name + '</a>');
+        tags.push('<a href="./' + config.root + tag.path + '">' + tag.name + '</a>');
     });%>
     &nbsp;
     <svg class="i-tag" viewBox="0 0 32 32" width="14" height="14" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
