--- a/layout/_partial/post/title.ejs
+++ b/layout/_partial/post/title.ejs
@@ -1,13 +1,13 @@
 <% if (item.link){ %>
   <h1 class="arc-title">
-      <a href="<%- item.link %>">
+      <a href="./<%- item.link %>">
           <%= item.title %>
       </a>
   </h1>
 <% } else { %>
   <% if (index){ %>
     <h1 class="index-title">
-        <a href="<%- config.root %><%- item.path %>">
+        <a href=".<%- config.root %><%- item.path %>">
             <%= item.title %>
         </a>
     </h1>
