给search.xml路径增加blog;

--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -24,7 +24,7 @@
     $(".dropdown-content").removeClass("open");
   })
 
-  var path = "/search.xml";
+  var path = "/blog/search.xml";
   searchFunc(path, 'local-search-input', 'local-search-result');
 </script>
 
