feat: 调整文章内引用的样式(参考了Vue官网引用的样式);

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -17,7 +17,7 @@
 </li>
 <hr>
 <% } else { %>
-
+  <link rel="stylesheet" href="<%- config.root %>css/attach.post.css">
   <article class="standard <%= item.layout %>">
     <div class="title">
       <%- partial('post/title') %>
