feat: 私人订制｜删除版权说明；不同页面点击左上角logo跳转不同路径；增加一些小部件；调整看板娘配置路径；

--- a/layout/_partial/navigator.ejs
+++ b/layout/_partial/navigator.ejs
@@ -2,7 +2,7 @@
   <div class="nav-container">
   <div class="nav navbar-nav navbar-left">
     <div class="navbar-header">
-      <a href="<%- config.root %>" class="navbar-brand"><%- theme.logo %></a>
+      <a href="javascript:void(0);" class="navbar-brand" ><%- theme.logo %></a>
     </div>
     <% if (site.categories && site.categories.length){ %>
 
