--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -17,3 +17,9 @@
 </div>
 <div class="clearfix">
 </div>
+
+<script src='https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js'></script>
+<script src='https://cdn.jsdelivr.net/gh/dinbror/bpopup@0.11.0/jquery.bpopup.min.js''></script>
+<script src="<%- config.root %>js/attach.js"></script>
+
+
