--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -2,14 +2,14 @@
 <li class="post-item">
   <%- partial('post/title') %>
   <div class="excerpt">
-  <% if (item.excerpt){ %>
+    <% if (item.excerpt){ %>
     <%- item.excerpt %>
-  <% } else { %>
+    <% } else { %>
     <%- strip_html(item.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, theme.excerpt_num) %>
-  <% } %>
-  <a href="<%- config.root %><%- item.path %>">
-    <%= __("read_more") %>
-  </a>
+    <% } %>
+    <a href="<%- config.root %><%- item.path %>">
+      <%= __("read_more") %>
+    </a>
   </div>
   <div class="index-meta">
     <%- partial('post/meta', {item: item}) %>
@@ -17,33 +17,59 @@
 </li>
 <hr>
 <% } else { %>
-  <link rel="stylesheet" href="<%- config.root %>css/attach.post.css">
-  <article class="standard <%= item.layout %>">
-    <div class="title">
-      <%- partial('post/title') %>
-    </div>
-    <div class="meta center">
-      <%- partial('post/meta', {item: item}) %>
-    </div>
-    <hr>
-    <% if (theme.show_toc_bool) {  %>
-      <%- toc(page.content, {list_number: false}) %>
-    <% } %>
-    <div class="picture-container">
-      <% if (item.photos && item.photos.length){ %>
-        <%- partial('post/gallery', {item: item}) %>
-      <% } %>
-    </div>
-    <%- item.content %>
-
-  </article>
-  </script>
-    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
-  </script>
-  <div class="busuanzi center">
-    <%= __("page_read") %>:&nbsp;<span id="busuanzi_value_page_pv"></span>&nbsp;・&nbsp;
-    <%= __("site_read") %>:&nbsp;<span id="busuanzi_value_site_pv"></span>&nbsp;・&nbsp;
-    <%= __("site_visitor") %>:&nbsp;<span id="busuanzi_value_site_uv"></span>
+<link rel="stylesheet" href="<%- config.root %>css/attach.post.css">
+<article class="standard <%= item.layout %>">
+  <div class="title">
+    <%- partial('post/title') %>
   </div>
+  <div class="meta center">
+    <%- partial('post/meta', {item: item}) %>
+  </div>
+  <hr>
+  <% if (theme.show_toc_bool) {  %>
+  <%- toc(page.content, {list_number: false}) %>
+  <% } %>
+  <div class="picture-container">
+    <% if (item.photos && item.photos.length){ %>
+    <%- partial('post/gallery', {item: item}) %>
+    <% } %>
+  </div>
+  <%- item.content %>
+  <%
+      var sUrl = url.replace(/index\.html$/, '');
+      sUrl = /^(http:|https:)\/\//.test(sUrl) ? sUrl : 'https:' + sUrl;
+    %>
+  <% if ((theme.declare_type === 2 || (theme.declare_type === 1 && post.declare)) && !index){ %>
+  <div class="declare">
+    <p><strong>本文作者：</strong>
+      <span><% if(config.author != undefined){ %>
+        <%= config.author%>
+        <% }else{%>
+        <font color="red">请在博客根目录“_config.yml”中填入正确的“author”</font>
+        <%}%></span></p>
+    <p><strong>Github</strong>
+      <a href='https://github.com/shuiRong' target='_blanket'>https://github.com/shuiRong</a></p>
+      <p>  <strong>本文链接：</strong>
+        <a href="https://linshuirong.cn<%- config.root %><%- item.path %>">https://linshuirong.cn<%- config.root %><%- item.path %></a>
+    </p>
+    <p> <strong>版权声明：</strong>
+      <span> 本作品采用
+        <a rel="license" href="<%= theme.licensee_url%>"><%= theme.licensee_name%></a>
+        进行许可。转载请注明出处！
+        <% if(theme.licensee_img != undefined){ %></span></p>
+    <% } %>
+  </div>
+  <% } else {%>
+  <div class="declare" hidden="hidden"></div>
+  <% } %>
+</article>
+</script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
+<div class="busuanzi center">
+  <%= __("page_read") %>:&nbsp;<span id="busuanzi_value_page_pv"></span>&nbsp;・&nbsp;
+  <%= __("site_read") %>:&nbsp;<span id="busuanzi_value_site_pv"></span>&nbsp;・&nbsp;
+  <%= __("site_visitor") %>:&nbsp;<span id="busuanzi_value_site_uv"></span>
+</div>
 <% } %>
 <%- partial('post/comment') %>
